Updated README with a screenshot

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,7 +7,7 @@
   <ul>
     <li class="dropdown">
       <a class="dropdown-toggle">
-        Click me to see some awesome things!
+        Learn More
       </a>
       <ul class="dropdown-menu">
         <li ng-repeat="thing in awesomeThings">
